--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "surf-coffee-chekup",
-    "version": "1.0.0",
-    "dependencies": {
-      "express": "^4.18.2"
-    },
-    "scripts": {
-      "start": "node server.js"
-    }
+  "name": "bumpy-thread-pump",
+  "version": "1.0.0",
+  "dependencies": {
+    "express": "^4.18.2"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
+}
